<resources>
    <string name="app_name">Thai Pronunciation Application TPA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tpa_description">
        TPA is based on research projects by Assist.Prof.Dr.Phanintra Teeranon upon
        “An acoustic study and perception test of Thai tones produced by those studying
        Thai as a foreign language and hearing impaired children”
        funded by The Higher Education Research Promotion (HERP).
    </string>
    <string name="learning">Learning</string>
    <string name="tab_menu_1">Main Menu</string>
    <string name="tab_menu_2">Learning each Thai Tones</string>
    <string name="tab_menu_3">Pronunciation Videos</string>
    <string name="txtConsonants">Consonants พยัญชนะ</string>
    <string name="title_activity_consonants">ConsonantsActivity</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="thai_tone_1_1">คา</string>
    <string name="thai_tone_1_2">ข่า</string>
    <string name="thai_tone_1_3">ค่า</string>
    <string name="thai_tone_1_4">ค้า</string>
    <string name="thai_tone_1_5">ขา</string>
    <string name="thai_tone_2_1">นา</string>
    <string name="thai_tone_2_2">หน่า</string>
    <string name="thai_tone_2_3">หน้า</string>
    <string name="thai_tone_2_4">น้า</string>
    <string name="thai_tone_2_5">หนา</string>
    <string name="thai_tone_3_1">คา</string>
    <string name="thai_tone_3_2">ข่า</string>
    <string name="thai_tone_3_3">ค่า</string>
    <string name="thai_tone_3_4">ค้า</string>
    <string name="thai_tone_3_5">ขา</string>
    <string name="thai_tone_4_1">ไซ</string>
    <string name="thai_tone_4_2">ใส่</string>
    <string name="thai_tone_4_3">ใส้</string>
    <string name="thai_tone_4_4">ไซ้</string>
    <string name="thai_tone_5_1">คา</string>
    <string name="thai_tone_5_2">ข่า</string>
    <string name="word_thai_mimimal_1">แม่ค้าที่จังหวัดสงขลาปลูกต้นข่าบนหลังคา</string>
    <string name="word_eng_mimimal_1">The galangal was planted on the rooftop by a seller in Songkhla.</string>
    <string name="thai_tone_5_3">คาว</string>
    <string name="thai_tone_5_4">ข่าว</string>
    <string name="word_thai_mimimal_2">นักข่าวบันเทิงชอบเขียนข่าวคาวให้ยาวเข้าไว้</string>
    <string name="word_eng_mimimal_2">The reporter likes to write the scandalous news in detail.</string>
    <string name="thai_tone_5_5">ปา</string>
    <string name="thai_tone_5_6">ป่า</string>
    <string name="word_thai_mimimal_3">ป้าปลูกดอกจาปาป่าไว้หน้าบ้านที่เขาใหญ่</string>
    <string name="word_eng_mimimal_3">My aunt grew a Sonchampa tree in front of the house in Khao Yai.</string>
    <string name="thai_tone_5_7">ปู</string>
    <string name="thai_tone_5_8">ปู่</string>
    <string name="word_thai_mimimal_4">ปู่ปูเสื่อไว้หน้าบ้าน</string>
    <string name="word_eng_mimimal_4">Grandpa has put a mat in front of the house.</string>
    <string name="thai_tone_5_9">โปรง</string>
    <string name="thai_tone_5_10">โปร่ง</string>
    <string name="word_thai_mimimal_5">เทรนด์กระโปรงผ้าโปร่งโดนอย่างแรง</string>
    <string name="word_eng_mimimal_5">The see-through skirt is currently a trend.</string>
    <string name="thai_tone_5_11">กลอง</string>
    <string name="thai_tone_5_12">กล่อง</string>
    <string name="word_thai_mimimal_6">ชาวบ้านเจอกล่องลอยอยู่ในแม่น้าแม่กลอง ราชบุรี</string>
    <string name="word_eng_mimimal_6">The villagers found a box floating along Mae Klong River of Ratchaburi.</string>
    <string name="thai_tone_5_13">ใย</string>
    <string name="thai_tone_5_14">ใหญ่</string>
    <string name="word_thai_mimimal_7">แมงมุมตัวใหญ่ชักใยบนเสาไฟ</string>
    <string name="word_eng_mimimal_7">A big spider has spun long web along the electricity post.</string>
    <string name="thai_tone_5_15">ดำ</string>
    <string name="thai_tone_5_16">ด่ำ</string>
    <string name="word_thai_mimimal_8">เรานั่งกินที่ครัวนายดาดื่มด่าบรรยากาศที่ภูเก็ต</string>
    <string name="word_eng_mimimal_8">We had dinner at Nai Dam Kitchen to enjoy the atmosphere of Phuket</string>
    <string name="thai_tone_5_17">ไทย</string>
    <string name="thai_tone_5_18">ไถ่</string>
    <string name="word_thai_mimimal_9">คนร้ายจับคนไทย เรียกค่าไถ่ที่หาดใหญ่</string>
    <string name="word_eng_mimimal_9">Criminals have kidnapped Thais in Hat Yai.</string>
    <string name="thai_tone_5_19">ฟัง</string>
    <string name="thai_tone_5_20">ฝั่ง</string>
    <string name="word_thai_mimimal_10">ฉันชอบนั่งริมฝั่งฟังเสียงลมที่พัทยา</string>
    <string name="word_eng_mimimal_10">I love to sit near the shore listening to the wind at Pattaya.</string>
    <string name="thai_tone_5_21">ยาง</string>
    <string name="thai_tone_5_22">อย่าง</string>
    <string name="word_thai_mimimal_11">บ้านฉันที่กาญจนบุรีขายยางอย่างดี</string>
    <string name="word_eng_mimimal_11">My house at Kanchanaburi sells good quality tires.</string>
    <string name="thai_tone_5_23">กำ</string>
    <string name="thai_tone_5_24">ก่ำ</string>
    <string name="word_thai_mimimal_12">เขาหน้าแดงก่ากาหมัดแน่นหลังแพ้แข่งชกมวยไทย</string>
    <string name="word_eng_mimimal_12">He has a red face and holds his hands tightly after losing the Thai fight.</string>
    <string name="thai_tone_5_25">ลม</string>
    <string name="thai_tone_5_26">หล่ม</string>
    <string name="word_thai_mimimal_13">มีลมที่หล่มภูเขียว จังหวัดลาปาง</string>
    <string name="word_eng_mimimal_13">The wind blows at Lom Phu Kheaw, Lampang.</string>
    <string name="thai_tone_5_27">ทราย</string>
    <string name="thai_tone_5_28">ส่าย</string>
    <string name="word_thai_mimimal_14">น้องแต้วเต้นบนหาดทรายส่ายสะโพกที่กระบี่</string>
    <string name="word_eng_mimimal_14">Taew danced the dip in your hip on Krabi beach.</string>
    <string name="thai_tone_5_29">ปน</string>
    <string name="thai_tone_5_30">ป่น</string>
    <string name="word_thai_mimimal_15">น้าจิ้มฝรั่งต้องเอาพริกป่นปนกับเกลือ</string>
    <string name="word_eng_mimimal_15">We have to mix salt and chili to make the sauce for guava.</string>
    <string name="thai_tone_5_31">ไซ</string>
    <string name="thai_tone_5_32">ใส่</string>
    <string name="word_thai_mimimal_16">พ่อค้านครชัยศรีจับปลาใส่ไซไว้ขายส่ง</string>
    <string name="word_eng_mimimal_16">Nakornchaisri merchant catch fish in fish traps for wholesale.</string>
    <string name="thai_tone_5_33">มี</string>
    <string name="thai_tone_5_34">หมี่</string>
    <string name="word_thai_mimimal_17">แม่บอกน้องหมิวว่ามีหมี่โคราชบนโต๊ะ</string>
    <string name="word_eng_mimimal_17">Mommy told her daughter, Mew, that we have Korat noodles on the table.</string>
    <string name="thai_tone_5_35">แพ</string>
    <string name="thai_tone_5_36">แผ่</string>
    <string name="word_thai_mimimal_18">ที่พะเยาผักตบชวาลอยเป็นแพแผ่ไปทั่วกว๊าน</string>
    <string name="word_eng_mimimal_18">A lot of water plants are scattered in Phayao Lake.</string>
    <string name="thai_tone_6_1">ข่า</string>
    <string name="thai_tone_6_2">ค่า</string>
    <string name="word_thai_mimimal_19">ช่วงนี้ข่าที่ตลาดสี่มุมเมืองมีค่าราคาสูง</string>
    <string name="word_eng_mimimal_19">Galangal’s price of Simummuang market is high during this period.</string>
    <string name="thai_tone_6_3">เข่า</string>
    <string name="thai_tone_6_4">เข้า</string>
    <string name="word_thai_mimimal_20">เขาคลานเข่าเข้ากราบพระที่พิษณุโลก</string>
    <string name="word_eng_mimimal_20">He crawled on his knees to pay respect to a monk.</string>
    <string name="thai_tone_6_5">ข่าว</string>
    <string name="thai_tone_6_6">ข้าว</string>
    <string name="word_thai_mimimal_21">ตามข่าวว่าที่จังหวัดสุพรรณบุรีมีข้าวขาวขายช่วงค่า</string>
    <string name="word_eng_mimimal_21">According to the news, milled rice will be sold at night.</string>
    <string name="thai_tone_6_7">ข่าง</string>
    <string name="thai_tone_6_8">ข้าง</string>
    <string name="word_thai_mimimal_22">เขาวางลูกข่างไว้ข้างขวด</string>
    <string name="word_eng_mimimal_22">He kept the gyroscope next to the bottle.</string>
    <string name="thai_tone_6_9">ป่า</string>
    <string name="thai_tone_6_10">ป้า</string>
    <string name="word_thai_mimimal_23">ป้าปลูกป่า เลี้ยงปลาในบ่อที่จังหวัดสิงห์บุรี</string>
    <string name="word_eng_mimimal_23">My aunt has grown tress and fed fish.</string>
    <string name="thai_tone_6_11">ปั่น</string>
    <string name="thai_tone_6_12">ปั้น</string>
    <string name="word_thai_mimimal_24">พวกเราปั่นจักรยานไปดูงานปั้นที่นครพนม</string>
    <string name="word_eng_mimimal_24">We rode bicycles to visit sculpture arts at Nakhonphanom.</string>
    <string name="thai_tone_6_13">เป่า</string>
    <string name="thai_tone_6_14">เป้า</string>
    <string name="word_thai_mimimal_25">งานวัดที่จังหวัดนครสวรรค์มีปาเป้าเป่าลูกโป่ง</string>
    <string name="word_eng_mimimal_25">There are shooting games and ballon blowing at temple festival in Nakhonsawan.</string>
    <string name="thai_tone_6_15">อ่าง</string>
    <string name="thai_tone_6_16">อ้าง</string>
    <string name="word_thai_mimimal_26">คนอ้วนที่จังหวัดอ่างทองอ้าอึ้งอ้างว่าติดอ่าง</string>
    <string name="consonantsTitle">Consonants เสียงพยัญชนะ</string>
    <string name="consonants01a">
        เสียงพยัญชนะภาษาไทยมี 21 เสียง
        อวัยะที่ออกเสียงพยัญชนะจะมีปากบน ปากล่าง ลิ้น ฟัน ปุ่มเหงือก เพดานแข็ง เพดานอ่อน ช่องปาก และช่องจมูก
        เวลาเราออกเสียงพยัญชนะ จะดู 3 ส่วน ส่วนฐาน-กรณ์ หรือ ที่เกิดเสียง (place of articulation) กับ
        ลักษณะการออกเสียง (manner of articulation) และการสั่นของเส้นเสียง (vocal cords)
    </string>
    <string name="consonants02a">
        ส่วนที่เกิดเสียงจะดู อวัยวะที่ขยับ กับ อวัยวะที่ไม่ขยับ อวัยวะที่ขยับเรียกว่า กรณ์ หรือ active articulator  ส่วนอวัยวะที่ไม่ขยับเรียกว่า ฐาน หรือ passive articulator
        ลักษณะการออกเสียง หรือ วิธีกักกั้นลมในช่องปาก เราจะดูว่าเวลาออกเสียงพยัญชนะหนึ่งๆมีการกักลมสนิท เรียกว่า เสียงกัก (stops) หรือ กักลมบางส่วนปล่อยลมบางส่วน เรียกว่า เสียงเสียดแทรก (fricative) หรือ ลดเพดานอ่อนลงเปิดช่องให้ลมออกทั้งช่องปากและช่องจมูก เรียกว่า เสียงนาสิก (nasals) หรือ ปล่อยลมออกข้างลิ้น เรียกว่า เสียงข้างลิ้น (lateral) หรือ กักลมน้อยมาก เรียกว่า เสียงเปิด (approximant)
        เสียงที่เปล่งออกมาแล้วเส้นเสียงสั่น เรียกว่า เสียงก้อง (voicing) เสียงที่เปล่งออกมาแล้ว เส้นเสียงไม่สั่น เรียกว่า เสียงไม่ก้อง (voiceless)
    </string>
    <string name="vowelsTitle">Vowels เสียงสระ</string>
    <string name="vowelsContent">สระในภาษาไทยมี 21 เสียง ประกอบด้วย สระเดี่ยว 18 เสียง สระประสม 3 เสียง
เวลาเราออกเสียงสระ จะดูที่ 3 ส่วน คือ ลิ้นขยับบน-ล่าง (tongue height) ลิ้นขยับหน้า-หลัง (tongue advancement) และริมฝีปากห่อ-เหยียด (lips rounding) โดยสระสั้นจะแทนด้วยสัญลักษณ์ที่มีตัวสัทอักษรเดียว ส่วนสระยาวจะมีเครื่องหมาย  ตามหลังเสียงสระแต่ละเสียง</string>
    <string name="vowelsTitle2">สระเดี่ยว (monophthongs)</string>
    <string name="symbolsTitle">Thai Tones Symbols วรรณยุกต์</string>
    <string name="symbolsContent">
        เสียงวรรณยุกต์ภาษาไทยมี 5 เสียง
อวัยะที่ออกเสียงวรรณยุกต์จะเป็นเส้นเสียงในกล่องเสียง ถ้าเส้นเสียงสั่นด้วยอัตราเร็วสูง เสียงวรรณยุกต์จะสูง ถ้าเส้นเสียงสั่นด้วยอัตราการสั่นต่า เสียงวรรณยุกต์จะต่า
เสียงวรรณยุกต์ในภาษาไทยจะมีความสูงต่าเทียบได้กับโน้ตดนตรี ที่ปรากฎบน musical bar 5 เส้น เส้นล่างสุดแทนระดับเสียงต่าที่สุด มีค่าเท่ากับเลข 1 เส้นบนสุดแทนระดับเสียงสูงที่สุด มีค่าเท่ากับเลข 5 เส้นกลางแทนระดับเสียงกลาง มีค่าเท่ากับเลข 3 เป็นต้น
    </string>
    <string name="symbolsTitle2">สัญลักษณ์เสียงวรรณยุกต์Thai tone symbols</string>
    <string name="learn_cat_num">ตัวเลข Cardinal numbers</string>
    <string name="learn_cat_anim">สัตว์ Animals</string>
    <string name="learn_cat_thing">สิ่งของ Things</string>
    <string name="learn_cat_color">สี Colors</string>
    <string name="learn_cat_action">กริยา Actions</string>
    <string name="learn_minimal_pairs_mid">สามัญ-เอก Mid-Low</string>
    <string name="learn_minimal_pairs_low">เอก-โท Low-Falling</string>
    <string name="learn_minimal_pairs_high">ตรี-จัตวา High-Rising</string>
</resources>