<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_next_learning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Learning each Thai Tones" />

            <TextView
                android:id="@+id/symbolsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbolsTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/symbolsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbolsContent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/symbolsTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbolsTitle2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/symbols02" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>