<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_next_vowels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="เรียนรู้วรรณยุกต์" />

            <Button
                android:id="@+id/btn_next_vowels_practice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="ฝึกออกเสียงวรรณยุกต์" />

            <TextView
                android:id="@+id/vowelsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vowelsTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/vowelsContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vowelsContent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/vowelsTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vowelsTitle2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/vowels02" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>
