<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <RelativeLayout
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:alpha="0.5"
            android:id="@+id/myImageView"
            android:scaleType="centerCrop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:paddingBottom="15dp"
            android:src="@drawable/consonants01a"
            />
        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/myImageView"
            android:layout_alignTop="@+id/myImageView"
            android:layout_alignRight="@+id/myImageView"
            android:layout_alignBottom="@+id/myImageView"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textSize="@dimen/display1"
            android:text="@string/consonantsTitle"
            android:textColor="@color/primary_text" />

        <Button
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_bg_round_2"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/button"
            android:layout_gravity="center"
            android:id="@+id/btn_next_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning" />


    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:textSize="@dimen/headline"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:text="@string/consonantsTitle"/>

            <ImageView
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/consonants01a" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consonants01a"
                android:textSize="@dimen/body"
                android:textColor="@color/primary_text"/>

            <View
                android:layout_margin="20dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorOverlay" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consonants02a"
                android:textSize="@dimen/body"
                android:textColor="@color/primary_text" />

            <ImageView
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/consonants02a" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>