<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <RelativeLayout
        android:id="@+id/learn_cat_num"
        android:layout_weight="1"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#80000000"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="@dimen/subheading"
                android:textColor="#ffffff"
                android:text="@string/learn_cat_num"/>



        </LinearLayout>

        <View
            android:background="@drawable/selector_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/learn_cat_anim"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#80000000"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="@dimen/subheading"
                android:textColor="#ffffff"
                android:text="@string/learn_cat_anim"/>


        </LinearLayout>

        <View
            android:background="@drawable/selector_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/view" />

    </RelativeLayout>

    <RelativeLayout
    android:id="@+id/learn_cat_thing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivImg3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#80000000"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="@dimen/subheading"
            android:textColor="#ffffff"
            android:text="@string/learn_cat_thing"/>



    </LinearLayout>

    <View
        android:background="@drawable/selector_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/learn_cat_color"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImg6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#80000000"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvName5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="@dimen/subheading"
                android:textColor="#ffffff"
                android:text="@string/learn_cat_color"/>



        </LinearLayout>

        <View
            android:background="@drawable/selector_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/learn_cat_action"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImg7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#80000000"
            android:layout_alignParentBottom="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvName6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="@dimen/subheading"
                android:textColor="#ffffff"
                android:text="@string/learn_cat_action"/>



        </LinearLayout>

        <View
            android:background="@drawable/selector_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

</LinearLayout>


